--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1"
-  }
+  },
+  "homepage": "http://jcorf.github.io/spotify-network"
 }
